# cpack-source-package-issue

./: .travis.yml  CMakeLists.txt  xtravis.yml
src/: CMakeLists.txt  main.c
